tests/paczka1/fuzzy1/73491757.err
Error in line 1: 0VvJzTMPr A511 64,5
Error in line 9: VejEZQM7DQ A258 42,2
Error in line 19: sHmkKXx3I S768 14,0
Error in line 21: 0VvJzTMPr A511 53,4
Error in line 25: AZcoG04Fnhk A586 76,6
Error in line 31: wLTB A258 -2,0
